[package]
name = "oxanus"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "^0.4", features = ["serde"] }
redis = { version = "^0.31", features = [
  "connection-manager",
  "tcp_nodelay",
  "tokio-comp",
] }
sqlx = { version = "^0.8", features = [
  "runtime-tokio",
  "tls-rustls-ring-webpki",
  "postgres",
] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", features = ["preserve_order"] }
thiserror = "^2.0"
tokio = { version = "^1.43", features = ["full"] }
tracing = { version = "^0.1", features = ["log"] }
uuid = { version = "^1.16", features = ["serde", "v4"] }

[dev-dependencies]
testresult = "^0.4"
divan = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[[bench]]
name = "concurrency"
harness = false
