[package]
name = "oxanus"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A simple & fast job queue system."

[dependencies]
async-trait = "0.1"
chrono = { version = "^0.4", features = ["serde"] }
gethostname = "^1.0"
redis = { version = "^0.31", features = [
  "connection-manager",
  "tcp_nodelay",
  "tokio-comp",
] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", features = ["preserve_order"] }
thiserror = "^2.0"
tokio = { version = "^1.43", features = ["full"] }
tokio-util = { version = "^0.7" }
tracing = { version = "^0.1", features = ["log"] }
uuid = { version = "^1.17", features = ["serde", "v4"] }
signal-hook = { version = "^0.3" }

[dev-dependencies]
testresult = "^0.4"
divan = "^0.1"
rand = "^0.9"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[[bench]]
name = "concurrency"
harness = false
