[package]
name = "oxanus"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A simple & fast job queue system."

[lib]
doctest = false
test = true

[dependencies]
async-trait = "0.1"
chrono = { version = "^0.4", features = ["serde"] }
cron = "^0.15"
deadpool-redis = "^0.21"
futures = { version = "^0.3" }
gethostname = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", features = ["preserve_order"] }
thiserror = "^2.0"
tokio = { version = "^1.45", features = ["full"] }
tokio-util = { version = "^0.7" }
tracing = { version = "^0.1", features = ["log"] }
uuid = { version = "^1.17", features = ["serde", "v4"] }

[dev-dependencies]
divan = "^0.1"
dotenvy = "^0.15"
rand = "^0.9"
testresult = "^0.4"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[[bench]]
name = "concurrency"
harness = false
